--- a/examples/webui/app/things-details.html
+++ b/examples/webui/app/things-details.html
@@ -67,7 +67,7 @@
             <!-- Drawer Content -->
             <paper-menu>
 
-                <a href="things.html" selected="0">
+                <a data-route="things" href="things.html">
                     <iron-icon icon="home"></iron-icon>
                     <span>Things</span>
                 </a>
